2013-10-15  James Hunt  <james.hunt@ubuntu.com>

	* man/procenv.1:
	  - Fix for lintian bug: spelling-error-in-binary.
	* src/procenv.c:
	  - Fixes for lintian bugs: spelling-error-in-manpage,
	    hyphen-used-as-minus-sign.

2013-10-14  James Hunt  <james.hunt@ubuntu.com>

	* configure.ac: Add '--debug' option.
	* man/procenv.1:
	  - General tidy-up.
	  - OPTIONS: Added '--crumb-separator'.
	  - EXAMPLES: Added a few more.
	  - LIMITATIONS: Updated.
	* src/pr_list.c: Undo erroneous "fix" to pr_list_append() and
	  pr_list_prepend().
	* src/procenv.c:
	  - Remove "(linux)" suffix from capabilities, cgroups and oom
	    output: they are not displayed on other platforms, so the
	    information is redundant.
	  - Added '--crumb-separator'.
	  - show_network_if(): Put flags in containeris rather than dumping as a
	    comma-separated list.

2013-10-13  James Hunt  <james.hunt@ubuntu.com>

	* TODO: Update.
	* man/procenv.1: ENVIRONMENT VARIABLES:
	  - Added PROCENV_INDENT, PROCENV_INDENT_CHAR and PROCENV_SEPARATOR.
	* src/pr_list.c:
	  - Fix issue in pr_list_append() and pr_list_prepend().
	  - Added PR_LIST_FOREACH_STR() and PR_LIST_FOREACH_REV_STR() from
	    pr_list.h.
	  - pr_list_visitor_str(): New.
	* src/procenv.c:
	  - appendf(): Simplified and plugged a memory leak.
	  - appendva(): Simplified and plugged a memory leak.
	  - show_fds_linux(): Fixed memory leak.
	  - show_semaphores_linux(): Fixed memory leak.
	  - Comments.
	  - cleanup(): Check crumb_list before clearing it.
	  - check_envvars(): Added PROCENV_INDENT_ENV, PROCENV_INDENT_CHAR_ENV and
	    PROCENV_SEPARATOR_ENV.

2013-10-12  James Hunt  <james.hunt@ubuntu.com>

	* configure.ac: Add ability to disable optimisation for debugging.
	* man/procenv.1:
	  - SYNOPSIS: Added '--format=crumb'
	  - ENVIRONMENT VARIABLES: Added 'PROCENV_FORMAT'.
	  - NOTES: More details.
	  - EXAMPLES: Two examples showing how to use '--format'.
	* src/Makefile.am:
	  - Remove hard-coded optimisation flag.