@@ -1,5 +1,7 @@
 # TODO
 
+- Add YAML output format?
+- Sort *all* output values.
 - Introduce "value()" that can take a bare value. This will allow for
   example mount options to be displayed in a container.
 - Non-root queryable hdd attributes?
